[package]
name = "weather"
version = "0.1.2"
authors = ["George Semenov"]
description = "Rust CLI weather forecasting tool"
license = "MIT"
repository = "https://github.com/gsmnv/weather-rs"

[dependencies]
serde = "0.8.4"
serde_macros = "0.8.4"
serde_json = "0.8.1"
chrono = "0.2.25"
hyper = "0.9.10"
linked-hash-map = "0.3.0"

[dependencies.clap]
version = "2.5.2"
features = ["unstable"]
